# Zoho-project

./: .gitignore
ARC/: CMakeLists.txt  arc.cpp  arc.h  lru.cpp  lru.h
DoublyLinkedList/: .gitignore  CMakeCache.txt  CMakeLists.txt  DLL.h  Makefile  PrintVal.cpp  append.cpp  arc  arc.cpp  arc.h  arc1.cpp  arc1.h  cmake_install.cmake  delete.cpp  doubly_linked_list.h  header.h  insert.cpp  insertafter.cpp  insertbefor.cpp  main  main.cpp  printvalues.cpp  push.cpp  sample  size.cpp  test.cpp  testlru.cpp
DoublyLinkedList/main.dSYM/Contents/Resources/DWARF/: main
PriorityQueue/: main  main.c++  main.h
QueueusingArray/: .gitignore  CMakeLists.txt  header.h  main  main.cpp  queueDeque.cpp  queueDisplay.cpp  queueEnque.cpp  queueFront.cpp  queue_using_array.h
QueueusingLL/: dequeue.cpp  enqueue.cpp  header.h  main  main.cpp
StackusingArray/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  header.h  isempty.cpp  main  main.cpp  peek.cpp  pop.cpp  push.cpp  stack_using_array  stack_using_array.h
StackusingLL/: header.h  isempty.cpp  main  main.cpp  newNode.cpp  peek.cpp  pop.cpp  push.cpp
documentation/: may13-linkedlist  may13-queue  may13-stack  stack.pages
postgres/count extension/: calculate--0.0.1.c  calculate--0.0.1.sql  calculate.control  calculate_test.sql  count--0.0.1.sql  count.control  count_test.sql  makefile  readme.md
